# jetson

./: mine_locations.py  transforms.yaml
gantry/: CMakeLists.txt  README.md  package.xml
gantry/launch/: gantry_teensy.launch
gantry/msg/: control.msg  gantry_status.msg  gantry_status_old.msg  to_gantry_msg.msg  to_gantry_msg_old.msg
gantry/src/: gantry_lib.py  gantry_lib_for_sim_WIP.py  gantry_planner.py  gantry_planner_basel.py  gantry_planner_clean.py  gantry_sim.py  gantry_teensy_SIM.py  gantry_test_drive.py  gantry_tf.py  gantry_tf_new.py  test_custom_msg.py
imu_odom/: imu_odom.launch
launch/: basel.launch  demo.launch  endurance_test.launch  hough.launch  hough.rviz  init.launch  md_sim.launch  md_sim.rviz  probe_HIL.launch  probe_HIL_jetson.launch  simulated_mines.launch  simulation.launch  sve_sim.launch  sve_sim.rviz  sve_sim_WIP.launch  sve_sim_jetson.launch  viz.rviz  viz_jetson.rviz
launch/rviz/: sve_sim.rviz
launch/testing/: basel.launch  braking_teensy_test.launch  md_sim.launch  mine_estimator_testing.launch  (+4 more)
md/: CMakeLists.txt  package.xml  strong_signals
md/src/: acquisition.py  acquisition_SIM.py  gradient_ascent.py  gradientascent.py  md_serial.py  mine_sim.py  search.py  twoaxes_ascent.py
md_serial/: CMakeLists.txt  package.xml
probe/: CMakeLists.txt  data.m  package.xml
scorpion/: CMakeLists.txt  package.xml
scorpion/mesh/: scorpion_master.STL
scorpion/msg/: detection_result.msg
scorpion/src/: braking_teensy_SIM.py  localization_sim.py  localization_teensy_SIM.py  mine_SIM.py  mine_sim.py  report_SIM.py  scorpion.py
(+43 files in other folders)
